--- a/Main-Website/style_DaSiHa.css
+++ b/Main-Website/style_DaSiHa.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
 }
 body {
+    margin: 0;
     background-color: #492f09;
 }
 /* ------------------- Gallery Styles ------------------ */
@@ -31,8 +32,7 @@ body {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto auto;
     background-color: black;
-    padding: 50px;
-    gap: 50px;
+    gap: 10px;
 }
 
 .content {
