--- a/Game_04_example/style_gameSec.css
+++ b/Game_04_example/style_gameSec.css
@@ -8,15 +8,38 @@ margin: 0;
 main {
     margin: 0;
     display: flex;
-    background-color: green;
+    background-color: brown;
 }
 .gameSection {
-    background-color: orange;
+    background-color: red;
     align-items: center;
-    justify-content:center ;
+    justify-content: center;
     display: flex;
     flex-basis: 60%;
+    flex-direction: column;
 }
+.gameSection .panel {
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    justify-content: flex-end;
+}
+.gameSection .panel img {
+    display: flex;
+    flex-basis: 3%;
+    align-items: end;
+    justify-content: center;
+    max-width: 10%;
+}
+canvas {
+    border: 1px solid black;
+    background-color: white;
+    width: 100%;
+    height: auto;
+    max-width: 1920px;
+    max-height: 1080px;
+}
+
 .ad-Panel{
     margin: 0;
     flex-basis: 20%;
@@ -24,12 +47,4 @@ main {
 .ad-Panel img{
     width: 100%;
     height: auto;
-}
-canvas {
-    border: 1px solid black;
-    background-color: white;
-    width: 100%;
-    height: auto;
-    max-width: 1080px;
-    max-height: 720px;
 }
