--- a/Main-Website/style_GameSection.css
+++ b/Main-Website/style_GameSection.css
@@ -6,25 +6,26 @@ main {
     align-items: center;
     justify-content: center;
     display: flex;
-    flex-basis: 60%;
+    flex-basis: 70%;
     flex-direction: column;
 }
 .gameSection .game-Controls{
     display: flex;
     flex-direction:row;
     justify-content: space-between;
-    width: 85%;
+    width: 95%;
 }
 .game-Controls .rateings{
-    max-height: 50px;
+    max-height: 25px;
 }
 .game-Controls .fullscreen{
-    max-height: 50px;
+    max-height: 25px;
+    background-color: tan;
 }
 canvas {
     border: 1px solid black;
     background-color: white;
-    width: 85%;
+    width: 95%;
     height: auto;
     max-width: 100%;
     max-height: 100%;
@@ -32,7 +33,7 @@ canvas {
 .ad-Panel{
     background-color: tan;
     margin: 0;
-    flex-basis: 20%;
+    flex-basis: 15%;
     
 }
 .ad-Panel img{
