--- a/Main-Website/style_GameSection.css
+++ b/Main-Website/style_GameSection.css
@@ -40,3 +40,15 @@ canvas {
     width: 100%;
     height: auto;
 }
+
+@media (max-width: 568px) {
+    .ad-Panel {
+        display: none;
+    }
+    .gameSection {
+        flex-basis: 100%;
+    }
+    canvas {
+        width: 100%;
+    }
+}
