--- a/Main-Website/style_GameGallery.css
+++ b/Main-Website/style_GameGallery.css
@@ -35,7 +35,6 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgba(0, 128, 0, 0.8); /* Green with opacity */
     height: 0;
     overflow: hidden;
     transition: height 0.3s ease, backdrop-filter 0.3s ease;
@@ -43,6 +42,42 @@
     justify-content: center;
     align-items: center;
     backdrop-filter: blur(5px); /* Blur effect */
+}
+
+.overlay .Ledva {
+    background-color: blueviolet;
+    width: 100%; /* Ensure it spans the full width of the overlay */
+    height: 100%; /* Ensure it spans the full height of the overlay */
+    display: flex; /* Center content inside */
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+}
+
+.overlay .bowling {
+    background-color: #3f9627;
+    width: 100%; /* Ensure it spans the full width of the overlay */
+    height: 100%; /* Ensure it spans the full height of the overlay */
+    display: flex; /* Center content inside */
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+}
+
+.overlay .pes{
+    background-color: #ff0000;
+    width: 100%; /* Ensure it spans the full width of the overlay */
+    height: 100%; /* Ensure it spans the full height of the overlay */
+    display: flex; /* Center content inside */
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+}
+
+.overlay .game4 {
+    background-color: #0011ff;
+    width: 100%; /* Ensure it spans the full width of the overlay */
+    height: 100%; /* Ensure it spans the full height of the overlay */
+    display: flex; /* Center content inside */
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
 }
 
 .content:hover .overlay,
