--- a/Main-Website/style_GameGallery.css
+++ b/Main-Website/style_GameGallery.css
@@ -111,3 +111,14 @@
         flex-direction: column;
     }
 }
+@media (min-width: 781px) {
+    .gameGallery {
+        grid-template-columns: repeat(4, 1fr);
+        gap: 10px;
+    }
+
+    .content img {
+        width: 100%;
+        height: 100%;
+    }
+}
