--- a/Main-Website/style_GameGallery.css
+++ b/Main-Website/style_GameGallery.css
@@ -41,48 +41,48 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    backdrop-filter: blur(5px); /* Blur effect */
+    backdrop-filter: blur(5px);
 }
 
 .overlay .Ledva {
     background-color: blueviolet;
-    width: 100%; /* Ensure it spans the full width of the overlay */
-    height: 100%; /* Ensure it spans the full height of the overlay */
-    display: flex; /* Center content inside */
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
+    width: 100%; 
+    height: 100%; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
 }
 
 .overlay .bowling {
     background-color: #3f9627;
-    width: 100%; /* Ensure it spans the full width of the overlay */
-    height: 100%; /* Ensure it spans the full height of the overlay */
-    display: flex; /* Center content inside */
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.overlay .pes{
+.overlay .pes {
     background-color: #ff0000;
-    width: 100%; /* Ensure it spans the full width of the overlay */
-    height: 100%; /* Ensure it spans the full height of the overlay */
-    display: flex; /* Center content inside */
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .overlay .game4 {
     background-color: #0011ff;
-    width: 100%; /* Ensure it spans the full width of the overlay */
-    height: 100%; /* Ensure it spans the full height of the overlay */
-    display: flex; /* Center content inside */
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .content:hover .overlay,
 .overlay:hover {
-    height: 30%; /* Adjust the height as needed */
+    height: 30%;
 }
 
 .overlay button {
@@ -92,13 +92,13 @@
     cursor: pointer;
     font-size: 16px;
     transition: background-color 0.3s ease;
-    border-radius: 15px; /* Rounded edges */
+    border-radius: 15px;
     position: absolute;
-    left: 10px; /* Position on the left side */
+    left: 10px;
 }
 
 .overlay button:hover {
-    background-color: #f0f0f0; /* Slightly darker on hover */
+    background-color: #f0f0f0;
 }
 
 /* ------------------- @media srágory ----------------- */
