--- a/Main-Website/style_GameGallery.css
+++ b/Main-Website/style_GameGallery.css
@@ -17,17 +17,17 @@
 .content img {
     width: 100%;
     height: auto;
-    transition: filter 0.3s ease, transform 0.3s ease; /* Smooth transition */
+    transition: filter 0.3s ease, transform 0.3s ease;
 }
 
 .content:hover img {
-    filter: brightness(0.7); /* Darken the image */
+    filter: brightness(0.7);
 }
 
 .content:hover img,
 .content:hover .overlay,
 .overlay:hover img {
-    transform: scale(1.05); /* Slight zoom effect */
+    transform: scale(1.05);
 }
 
 .overlay {
@@ -42,42 +42,6 @@
     justify-content: center;
     align-items: center;
     backdrop-filter: blur(5px);
-}
-
-.overlay .Ledva {
-    background-color: blueviolet;
-    width: 100%; 
-    height: 100%; 
-    display: flex; 
-    justify-content: center; 
-    align-items: center;
-}
-
-.overlay .bowling {
-    background-color: #3f9627;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.overlay .pes {
-    background-color: #ff0000;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.overlay .game4 {
-    background-color: #0011ff;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .content:hover .overlay,
@@ -101,7 +65,7 @@
     background-color: #f0f0f0;
 }
 
-/* ------------------- @media srágory ----------------- */
+/* ------------------- @media ----------------- */
 @media (max-width: 780px) {
     .grid-layout {
         grid-template-columns: 1fr;
@@ -113,7 +77,7 @@
 }
 @media (min-width: 781px) {
     .gameGallery {
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(3, 1fr);
         gap: 10px;
     }
 
